--- a/BG.css
+++ b/BG.css
@@ -44,13 +44,21 @@ body{
 }
 
 #headca{
-	font-size: 150px;
+	font-size: 10vw;
 	color: white;
 }
 #headn{
-	font-size: 12vh;
+	font-size: 9vh;
 	color: #ffffff;
 	margin-left: 5vw;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2.5vw;
 }
 @media only screen and (max-width: 768px){
   #headn{
@@ -58,30 +66,43 @@ body{
 		text-align: center;
 }
 }
-
+@media only screen and (max-width: 1024px){
+  #headca{
+  	font-size: 10vw;
+	}
+	.centered{
+		font-size: 4vw;
+	}
+}
 @media only screen and (max-width: 768px){
   #headca{
-  	font-size: 70px;
-}
+  	font-size: 8vh;
+	}
+	.centered{
+		font-size: 4vh;
+	}
 }
 @media only screen and (max-width: 370px){
   #headca{
-  	font-size: 50px;
+  	font-size: 8vh;
+	}
+	.centered{
+		font-size: 4vh;
+	}
 }
-}
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 40px;
-}
+
 .topleft {
   position: absolute;
   top: 10px;
   left: 10px;
 	font-size: 150px;
 	width: 100%;
+}
+#c1,#c2,#c3{
+	transition-duration: 0.2s;
+}
+#c1:hover,#c2:hover,#c3:hover {
+	opacity: 0.4;
 }
 #log{
 	border-style: none;
@@ -156,8 +177,8 @@ ul.navbar-nav li a.nav-link.hide-item{
 	position: absolute;
 	top: 25%;
 	left: 50%;
-	width: 600px;
-	height: 44px;
+	width: 50%;
+	height: 50%;
 	transform: translateX(-50%);
 	opacity: 0;
 	visibility: hidden;
@@ -180,7 +201,7 @@ ul.navbar-nav li a.nav-link.hide-item{
 }
 .search-form input{
 	width: 100%;
-	height: 44px;
+	padding: 3% 3%;
 	background-color: white;
 	color: black;
 	border: none;
@@ -193,16 +214,15 @@ ul.navbar-nav li a.nav-link.hide-item{
 .search-topic{
 	position: fixed;
 	left: 50%;
-	width: 600px;
-	height: 44px;
-	transform: translateX(-50%);
+	width: 50%;
+	transform: translate(-50%,30%);
 	opacity: 0;
 	visibility: hidden;
 	transition: 0.5s;
 }
 .search-topic input{
 	width: 100%;
-	height: 44px;
+	padding: 3vh 3vh 3vh 1vh;
 	background-color: white;
 	color: black;
 	border: none;
@@ -215,6 +235,7 @@ ul.navbar-nav li a.nav-link.hide-item{
 .topic.hide-item{
 	transform: scale(0);
 }
+
 input[type=text]{
 	display: inline-block;
 	border: none;
