--- a/BG.css
+++ b/BG.css
@@ -37,7 +37,6 @@ a, a:hover{
 body{
 	font-family: 'arca_majora_3bold' , 'Prompt', sans-serif;
 }
-
 .form-group {
 	margin:10px;
 }
@@ -57,7 +56,7 @@ body{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-	font-size: 25vw;
+	font-size: 2.5vw;
 }
 
 .topleft {
@@ -66,6 +65,15 @@ body{
   left: 10px;
 	font-size: 150px;
 	width: 100%;
+}
+#login {
+	display: inline;
+	background-color: #222222;
+	padding: 1.5%;
+	position:fixed;
+	top:50%;
+	left:50%;
+	transform: translate(-50%,-50%);
 }
 #log{
 	border-style: none;
